# fourmolu

./: .gitattributes  .gitignore  .hooky.kdl  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPER.md  LICENSE.md  README.md  cabal.project  format.sh  fourmolu.cabal  fourmolu.yaml  hie.yaml  stack-ghc-8.10.yaml  stack-ghc-8.6.yaml  stack-ghc-8.8.yaml  stack-ghc-9.0.yaml  stack-ghc-9.2.yaml  stack-ghc-9.4.yaml  stack-ghc-9.6.yaml  stack.yaml
.circleci/: config.yml  stack_build.sh
.github/ISSUE_TEMPLATE/: bug-report.md  formatting-improvements.md  new-configuration-option.md
.github/workflows/: build-prod-binary.yml  build_and_test.yml  ci.yml  format-compat.yml  lint.yml  pr-review-comment.yml  release.yml  sdist.yml  web.yml
app/: Main.hs
changelog.d/: README.md  add-config-file.md  add-fourmolu-options-pragma.md  add-import-grouping-scope.md  add-import-list-option.md  add-record-style.md  auto-ignore.md  column-limit-block-args.md  column-limit.md  comments.md  fix-indent-wheres-pattern-synonyms.md  fix-resolve-order.md  fourmolu-0.10.2.0.md  function-arrows-fixes.md  function-arrows-leading-args.md  function-arrows.md  ghc94.md  haddock-location-signature.md  haddock-style-module.md  if-style.md  implicit-params-parens.md  import-grouping-strategy.md  import-grouping.md  in-style-no-space.md  indent.md  let-style.md  module-warning-export.md  monkey-head.md  multi-line-compact.md  multiline-brackets.md  multiline-comments-indented.md  multiline-tuple-args.md  multiple-reexports.md  nested-constraint.md  newline-inside-type.md  one-level-ifs.md  ormolu-0.5.1.0.md  ormolu-0.5.2.0.md  ormolu-0.5.3.0.md  ormolu-0.6.0.1.md  (+31 more)
compat-tests/: Cabal.patch  cabal.diff  swarm.diff
config/: ConfigData.hs  ConfigGen.dhall  ConfigGen.jinja  Generate.hs  data.dhall  data.yaml  fourmolu-config.cabal  fourmolu_yaml.dhall  fourmolu_yaml.jinja  generate.hs  generate.py  generate.sh  prelude.dhall
config/FourmoluConfig/: ConfigData.hs  GenerateUtils.hs
data/: tmp-old.hs  tmp-out.hs  tmp.hs
data/cabal-test/: cabal-test.cabal
data/examples/backpack/: signature-0-four-out.hsig  signature-0-option=diff-friendly-import-export=false-out.hsig  signature-0-option=indentation=2-out.hsig  signature-0-option=newlines-between-decls=2-out.hsig  signature-0-option=record-brace-space=true-out.hsig  signature-0-option=respectful=false-out.hsig
data/examples/fourmolu/: list-multiline-out.hs  list-multiline.hs  mixed-disable-pragmas-four-out.hs  mixed-disable-pragmas.hs  multiline-haddocks-four-out.hs  multiline-haddocks-out.hs  multiline-haddocks.hs  multiline-tuple-args-four-out.hs  multiline-tuple-args-out.hs  multiline-tuple-args.hs  multiline-tuples-four-out.hs  multiline-tuples-out.hs  multiline-tuples.hs  type-app-promoted-four-out.hs
data/examples/import/: comments-inside-imports-four-out.hs  comments-inside-imports-option=indentation=2-out.hs  comments-inside-imports-option=newlines-between-decls=2-out.hs  comments-inside-imports-option=respectful=false-out.hs  comments-per-import-option=newlines-between-decls=2-out.hs  deduplication-bug-option=newlines-between-decls=2-out.hs  deprecated-export-multi-line-four-out.hs  docstrings-after-exports-four-out.hs  explicit-imports-bundle=fourmolu-out.hs  explicit-imports-four-ie-out.hs  explicit-imports-option=diff-friendly-import-export=false-out.hs  explicit-imports-option=indentation=2-out.hs  explicit-imports-option=newlines-between-decls=2-out.hs  explicit-imports-out.hs  explicit-imports-with-comments-bundle=fourmolu-out.hs  explicit-imports-with-comments-four-ie-out.hs  explicit-imports-with-comments-option=diff-friendly-import-export=false-out.hs  explicit-imports-with-comments-option=indentation=2-out.hs  explicit-imports-with-comments-option=newlines-between-decls=2-out.hs  explicit-imports-with-comments-out.hs  explicit-prelude-four-out.hs  explicit-prelude-option=newlines-between-decls=2-out.hs  merging-0-four-out.hs  merging-0-option=newlines-between-decls=2-out.hs  merging-1-option=newlines-between-decls=2-out.hs  merging-2-option=newlines-between-decls=2-out.hs  misc-bundle=fourmolu-out.hs  (+21 more)
data/parse-failures/: options-pragma.hs
expected-failures/: esqueleto.txt
fixity-tests/: Main.hs
ormolu-live/src/: Main.hs
region-tests/: Main.hs
scripts/: GetBinaryName.hs  GetBuildInfo.hs  MakeRelease.hs  build_prod_matrix.py  clean_redundant_examples.py  create_release_archives.py  make-release.sh  make_release.py  release_notes.py  run-fourmolu.sh
src/: Ormolu.hs
src/Ormolu/: CLI.hs  Config.hs  Diff.hs  Exception.hs  Imports.hs  Parser.hs  Printer.hs  Terminal.hs  Utils.hs
tests/Ormolu/: CabalExtensionsSpec.hs  CabalInfoSpec.hs  ConfigSpec.hs  PragmaOptionsSpec.hs  PrinterSpec.hs
tests/utils/: IntegrationUtils.hs
tmp/: Main-out-info.hs  Main-out.hs  Main.hs  notes
web/: README.md
web/fourmolu-wasm/: Dockerfile  build.sh  cabal.project  fourmolu-wasm.cabal  hie.yaml
web/fourmolu-wasm/cbits/: init.c
web/fourmolu-wasm/src/: ForeignUtils.hs  Main.hs
web/site/: .gitignore  cabal.project  fourmolu-web.cabal  hie.yaml  site.hs
web/site/pages/: changelog.md  config.md  index.md
web/site/pages/config/: close-bracket-style.md  column-limit.md  comma-style.md  defined-modules.md  fixities.md  function-arrows.md  haddock-location-signature.md  haddock-style-module.md  haddock-style.md  if-style.md  import-export-style.md  import-grouping-strategy.md  import-grouping.md  in-style.md  indent-wheres.md  indentation.md  let-style.md  local-modules.md  monkey-head.md  newline-inside-type.md  newlines-between-decls.md  one-level-ifs.md  preset.md  record-brace-space.md  record-style.md  reexports.md  respectful.md  shifted-ifs.md  single-constraint-parens.md  single-deriving-parens.md  single-line-types.md  sort-constraints.md  sort-derived-classes.md  sort-deriving-clauses.md  trailing-section-operators.md  unicode.md
web/site/static/: demo.css  demo.js  style.css
web/site/templates/: default-main.html  default-sidebar.html  default.html
web/worker/: build.sh  index.js  package-lock.json  package.json  webpack.config.js
(+1398 files in other folders)
