cabal-version: 3.0

name: fourmolu-wasm
version: 0

executable fourmolu-wasm
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
        ForeignUtils
    c-sources: cbits/init.c
    default-language: GHC2021
    ghc-options:
        -Wall
        -Wunused-packages
        -no-hs-main
        -optl-mexec-model=reactor
        "-optl-Wl\
        \,--export=malloc\
        \,--export=free\
        \,--export=runFourmolu\
        \,--export=getString\
        \,--export=getStringLen\
        \,--export=freeStringWithLen\
        \"

    build-depends:
        , aeson
        , base
        , bytestring
        , Cabal-syntax
        , containers
        , fourmolu
        , ghc-lib-parser
        , ghc-syntax-highlighter-themed
        , text
